mvp sayilabilecek calisan hali

--- a/KahootMvc/wwwroot/CreateQuiz.html
+++ b/KahootMvc/wwwroot/CreateQuiz.html
@@ -129,7 +129,7 @@
 
                             <!-- Form Butonları -->
                             <div class="d-flex justify-content-between">
-                                <a href="/Quiz/Index" class="btn btn-secondary">
+                                <a href="/ogretmen.html" class="btn btn-secondary">
                                     <i class="bi bi-arrow-left"></i> İptal
                                 </a>
                                 <button type="submit" class="btn btn-primary btn-lg" id="submitBtn">
