--- a/KahootMvc/wwwroot/index.html
+++ b/KahootMvc/wwwroot/index.html
@@ -39,6 +39,7 @@
             <div id="text">
                 <h3>Yarışmaya devam etmek için giriş yap, bilginle rakiplerini geride bırak!</h3>
             </div>
+        <div class="join-button"><button onclick="window.location.href='student.html'">OTURUMA KATIL</button></div>
         </div>
 
         <div class="slider">
