--- a/KahootMvc/wwwroot/createSession.html
+++ b/KahootMvc/wwwroot/createSession.html
@@ -239,7 +239,7 @@
         // SignalR Bağlantısı
         async function initSignalR() {
             connection = new signalR.HubConnectionBuilder()
-                .withUrl("https://localhost:7117/QuizHub")
+                .withUrl("/QuizHub")
                 .withAutomaticReconnect()
                 .build();
 
