--- a/KahootMvc/wwwroot/Student2.html
+++ b/KahootMvc/wwwroot/Student2.html
@@ -642,7 +642,7 @@
 
         async function initSignalR() {
             connection = new signalR.HubConnectionBuilder()
-                .withUrl("https://localhost:7117/QuizHub")
+                .withUrl("/QuizHub")
                 .withAutomaticReconnect()
                 .build();
 
